# life-expectancy-dashboard

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  run_dashboard.py  setup_dev.py  update_dashboard.py  update_streamlit_cloud.py
.github/workflows/: ci-cd.yml  deploy-streamlit.yml
.streamlit/: config.toml
src/: advanced_models.py  data_fetcher.py  predictive_models.py
tests/: __init__.py  test_data_fetcher.py  test_predictive_models.py
utils/: data_analysis.py
